# justwon

./: LICENSE  README.md  sonar-project.properties
.github/workflows/: __build-test-node.yml  __build-test-python.yml  __quality-node.yml  __quality-python.yml  _ci-node.yml  _ci-python.yml  _detect-changes.yml  _sonar-scan.yml  backend_ci.yml  ci.yml  frontend_ci.yml  tests_and_lint.yml
backend/python/: justfile  pyproject.toml
backend/python/api/core/: .coveragerc  manage.py  pyproject.toml
backend/python/api/core/apps/: urls.py
backend/python/api/core/apps/auth/: backend.py  cookies.py  permissions.py  serializers.py  views.py
backend/python/api/core/apps/auth/user/: apps.py  managers.py  models.py  serializers.py  views.py
backend/python/api/core/apps/auth/user/migrations/: 0001_initial.py
backend/python/api/core/apps/blog/: enums.py
backend/python/api/core/apps/blog/categories/: apps.py  models.py  serializers.py  views.py
backend/python/api/core/apps/blog/categories/fixtures/: categories.json
backend/python/api/core/apps/blog/categories/migrations/: 0001_initial.py
backend/python/api/core/apps/blog/posts/: apps.py  models.py
backend/python/api/core/apps/blog/posts/migrations/: 0001_initial.py
backend/python/api/core/apps/blog/posttypes/: apps.py  models.py  serializers.py  views.py
backend/python/api/core/apps/blog/posttypes/fixtures/: posttypes.json
backend/python/api/core/apps/blog/posttypes/migrations/: 0001_initial.py
backend/python/api/core/apps/blog/series/: apps.py  models.py
backend/python/api/core/apps/blog/series/migrations/: 0001_initial.py
backend/python/api/core/apps/blog/tags/: apps.py  models.py
backend/python/api/core/apps/blog/tags/migrations/: 0001_initial.py
backend/python/api/core/base/: admin.py  exceptions.py  log.py  models.py
backend/python/api/core/base/exceptions/: __init__.py  exceptions.py  handler.py  responses.py
backend/python/api/core/config/: asgi.py  env.py  settings.py  urls.py  wsgi.py
backend/python/api/core/config/configs/: apps.py  auth.py  cors.py  django.py
backend/python/api/core/tests/: conftest.py  test_sample.py
backend/python/api/core/tests/factories/: __init__.py  blog.py  users.py
backend/python/api/core/tests/testcases/auth/: test_auth_apis.py  test_cornercases.py  test_user_apis.py  test_user_model.py
backend/python/api/core/tests/testcases/base/: test_base_models.py  test_exception_handler.py  test_exceptions.py  test_log.py
backend/python/api/core/tests/testcases/blog/: test_blog_models.py  test_category_apis.py  test_posttype_apis.py
frontend/: .gitignore  .npmrc  .prettierignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts
justwon/: jest.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.json
justwon/app/: error.tsx  (+5 more)
justwon_server/: .coveragerc  .pylintrc  Pipfile  manage.py
supabase/: config.toml
(+650 files in other folders)
