[project]
name = "justwon"
version = "0.1.0"
description = "JustWon Backend"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.0",
]

[tool.uv.workspace]
members = [
    "api/*",
    "libs/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "DJ", # flake8-django
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["E402", "F403", "F405"]
"**/migrations/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
