[project]
name = "justwon-core-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "django-environ>=0.12.0",
]

[dependency-groups]
dev = []

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "config"]
